<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.auth.logIn.SignInFragment">

    <TextView
        android:id="@+id/tvFirstTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Quiz App"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivFirstImage"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_study"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@id/tvFirstTitle"
        app:layout_constraintTop_toTopOf="@id/tvFirstTitle"
        app:layout_constraintEnd_toEndOf="@id/tvFirstTitle"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tillEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        style="@style/Style.TextInputLayout"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFirstImage"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Style.InputEditText"
            android:text=""
            android:hint="Please enter your email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tillPassword"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        style="@style/Style.TextInputLayout"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tillEmail"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Style.InputEditText"
            android:text=""
            android:hint="Please enter password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Style.SignInButton"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:text="@string/txt_signIn"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintStart_toStartOf="@+id/tillPassword"
        app:layout_constraintEnd_toEndOf="@+id/tillPassword"
        app:layout_constraintTop_toBottomOf="@id/tillPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSocialSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Style.SignInButton"
        android:layout_marginTop="30dp"
        android:text="@string/txt_social_signIn"
        app:icon="@drawable/google_logo"
        android:visibility="gone"
        app:iconGravity="textStart"
        android:textSize="15sp"
        app:iconPadding="10dp"
        app:iconTint="@null"
        android:layout_marginHorizontal="25dp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/tillPassword"
        app:layout_constraintEnd_toEndOf="@+id/tillPassword"
        app:layout_constraintTop_toBottomOf="@id/btnLogIn"/>

    <TextView
        android:id="@+id/tvSecondTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/goto_signUP"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/btnLogIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSocialSignIn"
        app:layout_constraintEnd_toEndOf="@+id/btnLogIn"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/term_condition"
        android:lineSpacingExtra="2dp"
        android:translationY="-5sp"
        android:visibility="invisible"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>